--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="common/header :: common-header"/>                     <!--header is taken from header.html th: common-header section-->
+<head th:replace="common/header :: common-header"/>
 <body>
 <!-- Login Section -->
-<img class="img-responsive" src="static/images/banner.png" alt="banner"/>
+<img class="img-responsive" src="../static/images/banner.png" alt="banner"/>
 <div class="container">
     <div class="row ">
         <div class="main-center ">
